--- a/.env.1
+++ b/.env.1
@@ -8,11 +8,10 @@
 
 
 
-
 db_user = "postgres"
-db_password = "atom654321"
-db_host="ael-dev.chz3zomwepzm.ap-northeast-1.rds.amazonaws.com"
+db_password = "kushal9010"
+db_host="demo.cruatvunb4ka.us-east-1.rds.amazonaws.com"
 db_port="5432"
-db_name="postgres"
+db_name="dbael-test"
 backend_server_host="localhost"
 backend_server_port="8000"
